# Sunbreeze

./: README.md  manage.py  pyproject.toml
sunbreeze/: __init__.py  app.py  main.py  wsgi.py
sunbreeze/templates/: error.html
templates/: index.html
tests/: conftest.py  test_api.py  test_sunbreeze.py
